Fixed index.html spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,6 +110,7 @@ body {
 	width: 100%;
 	background-color: #666666;
 	border-top: 8px solid #4aaaa5;
+	z-index: 2;
 }
 
 .maincontent_container {
